Fix spacing of common name on family and genus pages.

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -619,7 +618,7 @@ body.taxa { /* Override Shadowbox styles to allow multiple title lines for showi
 body.taxa #main h3 { color: #807121; font-size: 30px; line-height: 90%; }
 body.taxa #main h4 { clear: left; font-size: 18px; padding-top: 30px; }
 body.taxa #main ol, body.taxa #main ul { line-height: inherit; }
-body.taxa #main p.common { color: #807121; font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 30px; line-height: 155%; margin-bottom: 12px; }
+body.taxa #main p.common { color: #807121; font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 30px; line-height: 155%; margin: 0 0 12px 0; }
 body.taxa .frame { cursor: pointer; }
 body.taxa #sb-title, body.taxa #sb-title-inner { height: 76px; line-height: 70%; position: relative; }
 body.taxa #sb-title-inner div { bottom: 6px; position: absolute; }
