--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -28,7 +28,7 @@ body.taxa {
             font-family: $headings-font;
             font-size: 30px;
             line-height: 155%;
-            margin-bottom: 12px;
+            margin: 0 0 12px 0;
         }
     }
     .frame {
